# efs-zeropilot

./: .clang-format  .clang-tidy  .cproject  .gitattributes  .gitignore  .project  .travis.yml  LICENSE.md  Makefile  README.md  STM32F765ZGTx_FLASH.ld  ZeroPilot.ioc  project.mk  pull_request_template.md
Autopilot/: .cproject  Autopilot.ioc  CMakeLists.txt  Makefile  STM32F765ZGTx_FLASH.ld  STM32F765xG.cmake  ZeroPilot.ioc  ZeropilotRev1.ioc  ZeropilotRev1.mxproject  autopilot.envrc  build.sh  mx.scratch  stm32f7-openocd.cfg
Autopilot/AttitudeManager/: AttitudeDatatypes.hpp  AttitudeManagerInterface.cpp  AttitudeManagerInterface.h  Attitude_States.cpp  Attitude_States.hpp  CommWithPathManager.cpp  GetFromPathManager.cpp  GetFromPathManager.hpp  MadgwickAHRS.cpp  MadgwickAHRS.h  OutputMixing.cpp  OutputMixing.hpp  SendInstructionsToSafety.cpp  SendInstructionsToSafety.hpp  SendToActuators.hpp  SensorFusion.cpp  SensorFusion.hpp  attitudeManager.cpp  attitudeManager.hpp  attitudeStateClasses.cpp  attitudeStateClasses.hpp  attitudeStateManager.hpp  fetchSensorMeasurementsMode.cpp  fetchSensorMeasurementsMode.hpp
Autopilot/AttitudeManager/Inc/: AttitudeDatatypes.hpp  CommWithPathManager.hpp  GetFromPathManager.hpp  SendInstructionsToSafety.hpp  attitudeConfig.hpp  attitudeManager.hpp  attitudeManagerInterface.h  attitudeStateClasses.hpp  ultrasonic.hpp
Autopilot/AttitudeManager/Src/: CommWithPathManager.cpp  MadgwickAHRS.cpp  MahonyAHRS.cpp  OutputMixing.cpp  SendInstructionsToSafety.cpp  attitudeManager.cpp  attitudeManagerInterface.cpp  attitudeStateClasses.cpp
Autopilot/CControl/Src/: mul.c
Autopilot/DataStructures/: CMakeLists.txt
Autopilot/DataStructures/Inc/: vectorClass.hpp
Autopilot/DataStructures/Src/: vectorClass.cpp
Autopilot/Dev/: STM32F765xG.cmake
Autopilot/Drivers/STM32F7xx_HAL_Driver/: CMakeLists.txt
Autopilot/IMU/Src/: IMUInterface.cpp
Autopilot/Inc/: Attitude.h  AttitudePathInterface.hpp  ByteQueue.h  IMU.hpp  IMUInterface.h  IMUThreadInterface.h  Interchip_A.h  Interface.h  NMEAParser.h  OrientationControl.h  PID.h  PID.hpp  SensorFusion.hpp  Sensors.h  Spike.h  Stabilizer.h  TelemDriver.hpp  TelemPathInterface.hpp  VN300.hpp  adc.h  airSpeed.h  airspeed.hpp  airspeedThreadInterface.h  altimeter.h  altimeter.hpp  altimeterThreadInterface.h  batterysensor.hpp  comms.hpp  crc.h  debug.h  defines.h  eeprom.h  gimbal.hpp  gps.hpp  i2c.h  imu.hpp  main.h  spi.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  (+6 more)
Autopilot/Libraries/FreeRTOS/: cmake_install.cmake
Autopilot/Libraries/STM32F7xx_HAL_Driver/: cmake_install.cmake
Autopilot/Mavlink/: CMakeLists.txt  Decoder.cpp  Decoder.hpp  Encoder.cpp  Encoder.hpp  MavlinkFunctions.cpp  MavlinkFunctions.hpp
Autopilot/Mavlink/Mavlink2_lib/: CMakeLists.txt  mavlink_helpers.h
Autopilot/PathManager/: CommWithAttitudeManager.hpp
Autopilot/PathManager/Inc/: AutoSteer.hpp  CommWithAttitudeManager.hpp  CommsWithTelemetry.hpp  CoordinatedTurns.hpp  PathManagerInterface.h  PathManagerToTelem.hpp  TelemToPathManager.hpp  commsWithTelemetry.hpp  cruisingState.hpp  crusingStateInterface.hpp  getSensorData.hpp  landingManager.hpp  landingTakeoffManager.hpp  pathDatatypes.hpp  pathManager.hpp  pathManagerStateManager.hpp  pathMode.hpp  pathModeSelector.hpp  pathStateClasses.hpp  trackFinder.hpp  vectorClass.hpp  waypointManager.hpp
Autopilot/PathManager/Src/: AutoSteer.cpp  CommFromPMToAM.cpp  CommWithAttitudeManager.cpp  CommsWithTelemetry.cpp  (+21 more)
Autopilot/Simulation/: main.cpp
Autopilot/SimulationBuild/: CMakeCache.txt  cmake_install.cmake  sim
Autopilot/Src/: Attitude.c  ByteQueue.c  Callbacks.cpp  ControlAxis.cpp  Hex.cpp  IMU.cpp  IMUThreadInterface.cpp  Interchip_A.c  Interchip_A.cpp  MB1013.cpp  MPXV7002DP.cpp  MS5637.cpp  NMEAParser.c  NMEAParser.h  OrientationControl.c  PID.c  PID.cpp  ProgramStatus.c  SensorFusion.cpp  Sensors.c  Setpoints.c  Spike.c  VN300.cpp  adc.c  airSpeed.c  airspeedThreadInterface.cpp  altimeter.c  altimeter.cpp  altimeter.h  altimeterThreadInterface.cpp  batterySensor.c  comms.cpp  crc.c  debug.c  freertos.c  freertos.cpp  gimbal.cpp  gpio.c  gps.cpp  i2c.c  (+19 more)
Autopilot/TelemetryManager/: CommWithPathManager.cpp  CommWithPathManager.hpp  CommsWithPathManager.cpp  TelemToPathManager.cpp  TelemToPathManager.hpp  Telemetry_Manager.c  Telemetry_Manager.c.h  Telemetry_Manager.h  telemetryManager.cpp  telemetryManager.hpp  telemetryManagerInterface.h  telemetryStateClasses.cpp  telemetryStateClasses.hpp  telemetryStateManager.hpp
Autopilot/Test/: testMain.cpp
Autopilot/Tests/: CMakeLists.txt  clean.bash  runTests.bash
Autopilot/Tools/: GtestInstall_Windows.bash  New Text Document.txt  PlotSimResults.py  build.bash  build.sh  file.py  setenv_autopilot.sh  test.bash  zeropilot_rev1.bash
Autopilot/UnitTestSrc/: Test_Airspeed.cpp  Test_Altimeter.cpp  Test_mpu9255.cpp  runTests.bash  testMain.cpp
Autopilot/boardfiles/: Autopilot_ZeropilotRev1.ioc  STM32F765ZGTx_FLASH.ld  stlinkv2-openocd.cfg
Autopilot/simulationBuild/: CMakeCache.txt  cmake_install.cmake  sim
Autopilot/testBuild/: CMakeCache.txt  cmake_install.cmake  runTests
Safety/: CMakeLists.txt  Makefile  STM32F030RCTx_FLASH.ld  STM32F030xx.cmake  Safety.ioc  mx.scratch
Safety/Inc/: Debug.hpp  PID.hpp  PPM.hpp  PWM.h  PWM.hpp  RSSI.hpp  SBUS.hpp  crc.h  debug.h  dma.h  dshot.hpp  gpio.h  grabber.hpp  i2c.h  imu.hpp  interchip_S.h  interchip_S.hpp  iwdg.h  main.h  main.hpp  mpu6050_driver.hpp  pinconfig.h  safetyConfig.hpp  safety_control.h  safety_controller.hpp  spi.h  spi.hpp  stm32f0xx_hal_conf.h  stm32f0xx_it.h  tim.h  usart.h
Safety/Src/: Debug.cpp  PID.cpp  PPM.cpp  PWM.c  PWM.cpp  RSSI.cpp  SBUS.cpp  crc.c  debug.c  debug.cpp  dma.c  dshot.cpp  gpio.c  grabber.cpp  i2c.c  imu.cpp  interchip_S.c  interchip_S.cpp  iwdg.c  main.c  main.cpp  mpu6050_driver.cpp  safety_control.c  safety_controller.cpp  spi.c  spi.cpp  stm32f0xx_it.c  tim.c  usart.c
Safety/Tests/: CMakeLists.txt
Safety/Tools/: build.bash
Safety/boardfiles/: STM32F030RCTx_FLASH.ld  Safety_ZeropilotRev1.ioc  stlinkv2-1-openocd.cfg  stlinkv2-openocd.cfg
(+1058 files in other folders)
