# CMakeLists for STM32 HAL library

set(TARGET_NAME STM32_HAL)

file(GLOB_RECURSE HAL_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Src/*.c")
file(GLOB_RECURSE HAL_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/Inc/*.h")

add_library(${TARGET_NAME} STATIC ${HAL_SOURCES} ${HAL_HEADERS})

target_include_directories(${TARGET_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/Inc
)
